kubernetes/frontend-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "alb" # Use "nlb" if you prefer Network Load Balancer
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing # Publicly accessible
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
